[package]
license = {workspace = true}

name = "dek-enforcement-api"
version.workspace = true
edition.workspace = true

repository.workspace = true
authors.workspace = true
rust-version.workspace = true


[dependencies]
dek-domain-schema = { path = "../dek-domain-schema" }
dek-agent-discovery = { path = "../dek-agent-discovery" }
anyhow.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
pollek-contract = { path = "../../contracts/generated/rust/pollek-contract" }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Diagnostics_Etw", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
