[package]
name = "dek-enroll"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
gethostname = "1.1.0"

[lints]
workspace = true
