[package]
license = {workspace = true}

name = "dek-enroll"
version = "0.1.0"
edition = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}


[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
dek-errors = { path = "../dek-errors" }
dek-domain-schema = { path = "../dek-domain-schema" }
thiserror.workspace = true
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
gethostname = "1.1.0"

[lints]
workspace = true

