[package]
license = {workspace = true}

name = "dek-entity-registry"
version.workspace = true
edition.workspace = true

repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
